// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReceiptRow /> renders Failure 1`] = `
<div
  className="receipt-row mx-0 row no-gutters"
>
  <div
    className="receipt-row-details col"
  >
    <div
      className="row no-gutters"
    >
      <div
        className="col-md-8 col-7"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="receipt-row-title col"
          >
            <i>
              Failure: 
            </i>
            <pre>
              {
  "error_message": "Exceeded the prepaid gas.",
  "error_type": "ActionError::FunctionCallError"
}
            </pre>
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="receipt-row-text col"
          >
            No logs
          </div>
        </div>
      </div>
      <div
        className="ml-auto text-right col-md-4 col-5"
      >
        <div
          className="row"
        >
          <div
            className="receipt-row-receipt-hash col"
          >
            222aLh5...
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ReceiptRow /> renders SuccessReceiptId 1`] = `
<div
  className="receipt-row mx-0 row no-gutters"
>
  <div
    className="receipt-row-details col"
  >
    <div
      className="row no-gutters"
    >
      <div
        className="col-md-8 col-7"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="receipt-row-title col"
          >
            <i>
              SuccessReceiptId: 
            </i>
            <pre>
              A5oSQ6z71zWi3X1KFy9xhNzyjj8bQx4wwboWUMnK1111
            </pre>
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="receipt-row-text col"
          >
            <pre
              className="jsx-788283820"
            >
              LOG: Counter is now: 1
            </pre>
          </div>
        </div>
      </div>
      <div
        className="ml-auto text-right col-md-4 col-5"
      >
        <div
          className="row"
        >
          <div
            className="receipt-row-receipt-hash col"
          >
            A8HaLh5...
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ReceiptRow /> renders SuccessValue 1`] = `
<div
  className="receipt-row mx-0 row no-gutters"
>
  <div
    className="receipt-row-details col"
  >
    <div
      className="row no-gutters"
    >
      <div
        className="col-md-8 col-7"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="receipt-row-title col"
          >
            No result
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="receipt-row-text col"
          >
            No logs
          </div>
        </div>
      </div>
      <div
        className="ml-auto text-right col-md-4 col-5"
      >
        <div
          className="row"
        >
          <div
            className="receipt-row-receipt-hash col"
          >
            9uZxS2c...
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
